<resources>
    <string name="app_name">Ensan Patient</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="signup_as_caregiver">Signup as Caregiver</string>
    <string name="signup_as_patient">Signup as Patient</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="please_enter_your_email_below_to_receive_your_password_reset_instructions">Please enter your email below to receive your password reset instructions.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="iqma_national_id">Iqama / National ID</string>
    <string name="password">Password</string>
    <string name="loginemailerror">Enter your email id</string>
    <string name="loginepwderror">Enter your password</string>
    <string name="errormsg">Something went wrong…!</string>
    <string name="i_accept_all_terms_and_conditions">I accept all privacy policy and terms!</string>
    <string name="nameerror">Enter your name</string>
    <string name="familynameerror">Enter your family name</string>
    <string name="emailerror">Enter a valid email id</string>
    <string name="mobileerror">Enter your mobile number</string>
    <string name="pwderror">Enter the password</string>
    <string name="passmatcherror">Please retype your password</string>
    <string name="acceptcondtionerror">Please accept terms and conditions!</string>
    <string name="doberror">Choose your date of birth</string>
    <string name="name">Name</string>
    <string name="family_name">Family Name</string>
    <string name="dob">Date of birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otperror">Invalid otp</string>
    <string name="gendererror">Please select gender</string>
    <string name="patternerror">Password must contain at least one digit, upper case letter and special characters</string>
    <string name="pwdsizeerror">Password must contain 6 digit</string>
    <string name="number_of_children">Enter Number of children</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="emergency_numbers">Emergency Numbers (5XXXXXXXX)</string>
    <string name="nochilderror">Enter No. of children\'s</string>
    <string name="heighterror">Enter your height</string>
    <string name="weighterror">Enter your weight</string>
    <string name="change_your_email">Change your email</string>
    <string name="bloodgrperror">Please select your blood group</string>
    <string name="emergencynoerror">Enter your emergency contact number</string>
    <string name="adderror">Enter your address</string>
    <string name="pboxerror">Enter your PO Box</string>
    <string name="cityerror">Enter your city name</string>
    <string name="reset">RESET</string>
    <string name="countryerror">Please choose your country name</string>
    <string name="family_members">Family Members</string>
    <string name="name_of_patient">Name of patient</string>
    <string name="phone_no">Phone no.</string>
    <string name="nationality">Nationality</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital Status</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="address">Address</string>
    <string name="personal_details">Personal Details</string>
    <string name="add_new">Add New +</string>
    <string name="continue_and_complete_profile">continue and complete profile</string>
    <string name="first_name_of_patient">First Name of Patient</string>
    <string name="last_name_of_patient">Last Name of Patient</string>
    <string name="fielderror">Field Required</string>
    <string name="delete_image">Delete Image</string>
    <string name="complete_medical_history">Complete Medical History</string>
    <string name="medical_condition">Medical Condition</string>
    <string name="surgery">Surgical History</string>
    <string name="medication_routine">Medication Routine</string>
    <string name="trauma">Trauma</string>
    <string name="comorbidities">Chronic diseases (Comorbidities)</string>
    <string name="general_condition_mobility">General Condition (Mobility)</string>
    <string name="write_here">Write Here</string>
    <string name="_100_words_limitation">100 Words Limitation</string>
    <string name="diet">Diet</string>
    <string name="the_paleo_diet">The Paleo Diet</string>
    <string name="the_blood_type_diet">The Blood Type Diet</string>
    <string name="the_vegan_diet">The Vegan Diet</string>
    <string name="the_mediterranean_diet">The Mediterranean Diet</string>
    <string name="raw_food_diet">Raw Food Diet</string>
    <string name="activities">Level of Activities</string>
    <string name="smoke">Smoking</string>
    <string name="exercise">Exercise routine</string>
    <string name="employment">Type of work</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="my_profile">My Profile</string>
    <string name="save_cards">Saved Cards</string>
    <string name="smoking">Smoking</string>
    <string name="excercise">Exercise</string>
    <string name="id_verification">ID Verification</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_insurance_card">Upload Insurance card</string>
    <string name="retry">Please Retry…!</string>
    <string name="image_uploaded">Image Uploaded</string>
    <string name="add_your_address">Add Your Address</string>
    <string name="of_patient">Name Of Patient</string>
    <string name="complete_patient_profile">Complete Patient Profile</string>
    <string name="add_member">Add Member</string>
    <string name="relationshiperror">Please Choose Relationship</string>
    <string name="typeerroe">Please choose type</string>
    <string name="chooserelationship">Choose Relationship</string>
    <string name="choosetype">Choose type</string>
    <string name="save_btn">Save</string>
    <string name="next">Next</string>
    <string name="save_diet">Save Diet</string>
    <string name="save_activity">Save Activity</string>
    <string name="add_emp">Add Emp.</string>
    <string name="deserror">Please enter description</string>
    <string name="are_you_working">Are you Currently Employed?</string>
    <string name="allergy">Allergy</string>
    <string name="drug_allergy">Drug Allergy</string>
    <string name="food_allergy">Food Allergy</string>
    <string name="others">Others</string>
    <string name="back">Back</string>
    <string name="update_profile">Update profile</string>
    <string name="select_time">Select Time</string>
    <string name="search_service">Search Service</string>
    <string name="book_now">Book now</string>
    <string name="ok">Okay</string>
    <string name="special_note">Special Note (optional)</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="past">Past</string>
    <string name="current">Current</string>
    <string name="noterror">No notes</string>
    <string name="profile">Profile</string>
    <string name="verified">Verified</string>
    <string name="dummy_user_name">Mohammed Salim</string>
    <string name="dummy_user_location">Sharjah</string>
    <string name="dummy_user_price">47 SAR /hr</string>
    <string name="dummy_rating_count">(10)</string>
    <string name="dummy_cared_for_text">Cared for 1 Family</string>
    <string name="dummy_exp_text">• 2 yrs</string>
    <string name="dummy_user_age">• 26 yrs old</string>
    <string name="background_check">Background Check</string>
    <string name="about_user_text">About Salim</string>
    <string name="lipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s type and scrambled it to make a book.</string>
    <string name="dummy_user_nationality">UAE</string>
    <string name="dummy_user_qualification">Bachelor of Pharmacy</string>
    <string name="services">Services</string>
    <string name="view_profile">View Profile</string>
    <string name="dummy_lang">Arabic</string>
    <string name="dummy_service">Emergency Department</string>
    <string name="languages">Languages</string>
    <string name="qualification">Qualification</string>
    <string name="booking_history">Booking History</string>
    <string name="accepted">Accepted</string>
    <string name="on_the_way">On the way</string>
    <string name="completed">Completed</string>
    <string name="doberrors">You are below 18</string>
    <string name="click_here">Click Here</string>
    <string name="accept">Accept</string>
    <string name="google_maps_key">AIzaSyDHbEyZ1dlCEYCKB0dRma62EE1v3saZYK8</string>
    <string name="select_family_member">Select Family Member</string>
    <string name="upload_profile_photo">Upload Profile Photo</string>
    <string name="pay_now">PAY NOW</string>
    <string name="extra_charges">Extra Charges</string>
    <string name="total">Due amount</string>
    <string name="doctor_visit">Doctor Visit</string>
    <string name="insurance_card">Insurance Card</string>
    <string name="id_proof">ID Proof</string>
    <string name="image_selected">Image Selected</string>
    <string name="add_new_btn">Add New</string>
    <string name="save">Save</string>
    <string name="get_started">GET STARTED</string>
    <string name="verification">Verification</string>
    <string-array name="blood_group">
        <item>@string/select_blood_group</item>
        <item>@string/a_pos</item>
        <item>@string/a_neg</item>
        <item>@string/b_pos</item>
        <item>@string/b_neg</item>
        <item>@string/ab_pos</item>
        <item>@string/ab_neg</item>
        <item>@string/o_pos</item>
        <item>@string/o_neg</item>
    </string-array>
    <string name="bmi">BMI</string>
    <string name="medical_condition_history">Medical Condition History</string>
    <string name="allergies">Allergies</string>
    <string name="edit_medical_history">Edit Medical History</string>
    <string name="clear_all">Clear All</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="total_balance">Total Balance</string>
    <string name="dummy_spent">SAR 00</string>
    <string name="dummy_balance">SAR 00</string>
    <string name="total_spent">Money Spent</string>
    <string name="transfer_money">Transfer Money →</string>
    <string name="transaction_history">Transaction History</string>
    <string name="cancel">Cancel</string>
    <string name="support">Support</string>
    <string name="paymenterror">Please Select a payment type</string>
    <string name="natinalityerror">Please select Nationality</string>
    <string name="confirm">Confirm</string>
    <string name="make_address_as_default">Make address as default</string>
    <string name="set_as_default">Set as default</string>
    <string name="employment_description">Employment Description</string>
    <string name="diabetic_diet">The Diabetic Diet</string>
    <string name="keto_diet">The Keto Diet</string>
    <string name="vegan_diet">The Vegan Diet</string>
    <string name="vegetarian_diet">The Vegetarian Diet</string>
    <string name="raw_diet">Raw Food Diet</string>
    <string name="law_salt_diet">Low Salt Diet</string>
    <string name="zone_diet">Zone Diet</string>
    <string name="activities_title">Activities</string>
</resources>