<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context=".view.activity.medicalhistory.view.MedicalHistoryActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/_5sdp"
                android:visibility="gone"
                android:rotation="180"
                android:src="@drawable/forward" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/allroundgothicmedium"
                android:gravity="center"
                android:text="@string/activities_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

        </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_70sdp">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/top_white_curved"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/_20sdp">

                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_gray"/>


                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_gray"
                    android:layout_marginStart="@dimen/_5sdp"/>


                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_gray"
                    android:layout_marginStart="@dimen/_5sdp"/>


                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_gray"
                    android:layout_marginStart="@dimen/_5sdp"/>


                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_gray"
                    android:layout_marginStart="@dimen/_5sdp"/>

                <View
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_8sdp"
                    android:background="@drawable/selection_orange"
                    android:layout_marginStart="@dimen/_5sdp"/>


            </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/allroundgothicmedium"
            android:gravity="start"
            android:text="@string/diet"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp" />

<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/ck_ploeo"-->
<!--            android:fontFamily="@font/kumbhsansregular"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/the_paleo_diet"-->
<!--            android:visibility="gone"/>-->

<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/ck_blood"-->
<!--            android:fontFamily="@font/kumbhsansregular"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/the_blood_type_diet"-->
<!--            android:visibility="gone"/>-->

<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/ck_vegon"-->
<!--            android:fontFamily="@font/kumbhsansregular"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/the_vegan_diet"-->
<!--            android:visibility="gone"/>-->

<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/ck_the_mediterranean_diet"-->
<!--            android:fontFamily="@font/kumbhsansregular"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/the_mediterranean_diet"-->
<!--            android:visibility="gone"/>-->

<!--        <CheckBox-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_marginStart="@dimen/_18sdp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/ck_raw_food_diet"-->
<!--            android:fontFamily="@font/kumbhsansregular"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:textColor="@color/black"-->
<!--            android:text="@string/raw_food_diet"-->
<!--            android:visibility="gone"/>-->

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_diabetic"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/diabetic_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_keto"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/keto_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_vegan"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/vegan_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_vegetarian"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/vegetarian_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_raw_food"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/raw_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_law_salt"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/law_salt_diet"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_zone"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/zone_diet"/>

        <TextView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/kumbhsansbold"
            android:gravity="center"
            android:id="@+id/btnmcondition"
            android:layout_gravity="end"
            android:text="@string/save"
            android:onClick="saveDiet"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/allroundgothicmedium"
            android:gravity="start"
            android:text="@string/activities"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_smoke"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/smoke"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_height="wrap_content"
            android:id="@+id/ck_exercise"
            android:fontFamily="@font/kumbhsansregular"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/black"
            android:text="@string/exercise"/>

        <TextView
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/login_button"
                android:fontFamily="@font/kumbhsansbold"
                android:gravity="center"
                android:id="@+id/btnsaveactivity"
                android:layout_gravity="end"
                android:text="@string/save"
                android:onClick="saveActivity"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_11sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/allroundgothicmedium"
            android:gravity="start"
            android:text="@string/employment"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20sdp"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kumbhsansregular"
            android:gravity="start"
            android:text="@string/are_you_working"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="@color/dark_text"
            android:textSize="@dimen/_11sdp" />

        <RadioGroup
            android:layout_marginLeft="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:fontFamily="@font/kumbhsansregular"
                android:textSize="@dimen/_12sdp"/>

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"
                android:fontFamily="@font/kumbhsansregular"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textSize="@dimen/_12sdp"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="vertical"
            android:id="@+id/employmentFormLayout"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write_here"
                android:fontFamily="@font/kumbhsansregular"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_18sdp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDes"
                android:textSize="@dimen/_13sdp"
                android:hint="@string/employment_description"
                android:fontFamily="@font/kumbhsansregular"
                android:layout_marginStart="@dimen/_18sdp"
                android:layout_marginEnd="@dimen/_18sdp">

            </EditText>

            <TextView
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/login_button"
                android:fontFamily="@font/kumbhsansbold"
                android:gravity="center"
                android:id="@+id/btnemployee"
                android:layout_gravity="end"
                android:text="@string/save"
                android:onClick="saveEmployee"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_55sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/txt_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button_white"
                    android:fontFamily="@font/kumbhsansbold"
                    android:gravity="center"
                    android:onClick="backPressed"
                    android:text="Back"
                    android:textAllCaps="true"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_weight="1"
                    android:background="@drawable/login_button"
                    android:fontFamily="@font/kumbhsansbold"
                    android:gravity="center"
                    android:onClick="nextClick"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</layout>